# mnemosyne

./: .gitattributes  .gitignore  2026-05-06-211705-this-session-is-being-continued-from-a-previous-c.txt  2026-05-31-153501-command-messagemoon-cellcommand-message.txt  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  MANUAL.ko.md  MANUAL.md  MILESTONE_1_REPORT.md  MILESTONE_1_VERIFICATION.md  MILESTONE_2_REPORT.md  MILESTONE_2_SUMMARY.md  MILESTONE_3_REPORT.md  MILESTONE_3_SUMMARY.md  PROJECT_STRUCTURE.md  README.ko.md  README.md  TEST_RESULTS.md  benchmark_async.sh  pyoxidizer.bzl  pyproject.toml  requirements-binary.txt  requirements.txt  setup.py  매뉴얼.md
.claude/: settings.json
.github/workflows/: release-binaries.yml
.moai/: manifest.json  status_line.sh
.moai/logs/: trace-1ec6fb34-4229-4934-b001-e1d1d9a388ad.jsonl  trace-db2fd13c-ea64-47bc-be6f-30cea6b65d95.jsonl
.moai/project/: product.md  structure.md  tech.md
.moai/reports/: session-1ec6fb34-4229-4934-b001-e1d1d9a388ad.md  session-db2fd13c-ea64-47bc-be6f-30cea6b65d95.md
.moai/state/: session-memo.md
.moon-cell/: DOC_STYLE.md  MANIFEST.md  VERSION
.moon-cell/docs/: BENCHMARK_GUIDE.md  BENCHMARK_RESULTS.md
.moon-cell/specs/: FOLLOW-UP-CANDIDATES.md  SPEC-ARCH-ASYNC-001.md  (+17 more)
docs/: BINARY_BUILD.md  BINARY_INSTALL.md  RUST_CORE_GUIDE.ko.md  RUST_CORE_GUIDE.md
extensions/: README.md  manifest-schema.md
mnemosyne/: __init__.py  __main__.py  cli.py  timestamps.py
mnemosyne-core/: Cargo.toml
mnemosyne-core/.cargo/: config.toml
mnemosyne-core/src/: db.rs  graph.rs  lib.rs  types.rs
mnemosyne-core/src/wiki/: mod.rs  tests.rs
rust-core/: INTERFACE_DESIGN.md
scripts/: bench_binary.sh  build_binary.sh  gen_manpages.py  install.ps1  install.sh
tests/: test_ask_chat_endpoints.py  test_binary_smoke.py  test_broken_links.py  test_call_graph.py  test_chat_store.py  test_citation_integrity.py  test_cli.py  test_cli_groups.py  test_extensions.py  test_extraction_cli.py  test_fallback.py  test_fallback_coverage.py  test_fts_search.py  test_hash_sync.py  test_hooks_cli.py  test_hooks_templates_sync.py  test_import_extraction.py  test_ingest_cli.py  test_integration_session.py  test_knowledge_graph_session.py  test_language_edge_cases.py  test_language_extractors.py  test_language_protocol.py  test_llm_bridge_async.py  test_llm_bridge_tokens.py  test_llm_wiki.py  test_longdoc_indexer.py  test_longdoc_pipeline_integration.py  test_longdoc_retriever.py  test_longdoc_schema.py  test_longdoc_security.py  test_main_entry.py  test_mcp_ask_chat.py  test_mcp_tools.py  test_nl_router.py  test_other_language_extractors.py  test_package.py  test_parsing_cache.py  test_pipeline.py  test_pipeline_integration.py  (+17 more)
(+208 files in other folders)
