[package]
name = "mnemosyne-core"
version = "0.2.0"
edition = "2021"

[lib]
name = "mnemosyne_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
rayon = "1.8"
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
petgraph = "0.6"

[dev-dependencies]
tempfile = "3.8"
